feat: 学习webpack5处理图片

--- a/webpack5/src/index.html
+++ b/webpack5/src/index.html
@@ -12,7 +12,11 @@
   <h1>hello world</h1>
   <div id="less-container">less-container</div>
   <div id="sass-container">sass-container</div>
-  <!-- <img src="./image1.png" alt="" srcset="" /> -->
+  <!-- 静态资源 static -->
+  <img src="/image1.png" alt="" srcset="" />
+  <!-- css-loader -->
+  <div id="image-container">image-container</div>
+  <img src="./images/image1.png" alt="" />
 </body>
 
 </html>
