feat: 整理下gitignore文件

--- a/webpack5/src/index.html
+++ b/webpack5/src/index.html
@@ -16,7 +16,7 @@
   <img src="/image1.png" alt="" srcset="" />
   <!-- css-loader -->
   <div id="image-container">image-container</div>
-  <img src="./images/image1.png" alt="" />
+  <!-- <img src="./images/image1.png" alt="" /> -->
 </body>
 
 </html>
