feat: 学习webpack环境变量配置

--- a/webpack5/src/index.html
+++ b/webpack5/src/index.html
@@ -23,11 +23,11 @@
   <!-- <div id="image-container">image-container</div> -->
   <!-- <img src="./images/image1.png" alt="" /> -->
   <div id="root"></div>
-  <script>
+  <!-- <script>
     setTimeout(() => {
       console.log(window._)
-    })
-  </script>
+    }, 2000)
+  </script> -->
 </body>
 
 </html>
