--- a/webpack5/src/index.html
+++ b/webpack5/src/index.html
@@ -20,7 +20,7 @@
   <!-- 静态资源 static -->
   <!-- <img src="/image1.png" alt="" srcset="" /> -->
   <!-- css-loader -->
-  <!-- <div id="image-container">image-container</div> -->
+  <div id="image-container">image-container</div>
   <!-- <img src="./images/image1.png" alt="" /> -->
   <div id="root"></div>
   <!-- <script>
