--- a/webpack5/src/index.html
+++ b/webpack5/src/index.html
@@ -11,6 +11,14 @@
     // VConsole 默认会挂载到 `window.VConsole` 上
     var vConsole = new window.VConsole();
   </script> -->
+  <script>
+    let docElment = document.documentElement
+    function setRemUnit() {
+      docElment.style.fontSize = docElment.clientWidth / 10 + 'px'
+    }
+    setRemUnit()
+    window.addEventListener("resize", setRemUnit)
+  </script>
 </head>
 
 <body>
@@ -23,6 +31,7 @@
   <div id="image-container">image-container</div>
   <!-- <img src="./images/image1.png" alt="" /> -->
   <div id="root"></div>
+  <input placeholder="请输入文本" />
   <!-- <script>
     setTimeout(() => {
       console.log(window._)
