--- a/React/react23.11.11/public/index.html
+++ b/React/react23.11.11/public/index.html
@@ -6,6 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+      .strong{
+        font-size: 20px;
+      }
+      .active{
+        background-color: green;
+      }
+    </style>
 </head>
 <body>
 <div id="root"></div>
