--- a/Vue/vue24.6.7/index.html
+++ b/Vue/vue24.6.7/index.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-<div id="app" a="1"  >{{name}}}  </div>
+<div id="app" a="1"  style="color:red;background:green">
+    <ul>
+        <li>cxs {{name}} 242424 {{title}} hshsh</li>
+    </ul></div>
 <script src="./dist/vue.js"></script>
 <script>
   let vm = new Vue({
